--- a/appmanifest.json
+++ b/appmanifest.json
@@ -8,32 +8,22 @@
 	"background_color": "#ffffff",
 	"icons": [
 		{
-			"src": "icons/icon-16.png",
+			"src": "icons/favicon-16x16.png",
 			"sizes": "16x16",
 			"type": "image/png"
 		},
 		{
-			"src": "icons/icon-32.png",
+			"src": "icons/favicon-32x32.png",
 			"sizes": "32x32",
 			"type": "image/png"
 		},
 		{
-			"src": "icons/icon-64.png",
-			"sizes": "64x64",
+			"src": "icons/android-chrome-192x192.png",
+			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "icons/icon-128.png",
-			"sizes": "128x128",
-			"type": "image/png"
-		},
-		{
-			"src": "icons/icon-256.png",
-			"sizes": "256x256",
-			"type": "image/png"
-		},
-		{
-			"src": "icons/icon-512.png",
+			"src": "icons/android-chrome-512x512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
